--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Core Styleguide</title>
-  </head>
-  <body>
-    <div id="styleguide"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <link
+            href="/favicon.ico"
+            rel="icon"
+        >
+        <meta
+            content="width=device-width, initial-scale=1.0"
+            name="viewport"
+        >
+        <title>Core Styleguide</title>
+    </head>
+    <body>
+        <div id="styleguide"></div>
+        <script type="module" src="/src/main.ts"></script>
+    </body>
 </html>
