fixed eslint errors; removed eslint examples dir

--- a/cypress/support/component-index.html
+++ b/cypress/support/component-index.html
@@ -1,5 +1,6 @@
+<!-- eslint-disable @html-eslint/require-meta-description -->
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
         <meta charset="utf-8">
         <meta
@@ -13,6 +14,7 @@
         <title>Components App</title>
     </head>
     <body>
+        <!-- eslint-disable-next-line @html-eslint/require-attrs -->
         <div data-cy-root></div>
     </body>
 </html>
