--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link
-            href="/favicon.ico"
-            rel="icon"
+        <meta
+            content="Vue component library focused on accessible, usable interactable elements"
+            name="description"
         >
         <meta
             content="width=device-width, initial-scale=1.0"
             name="viewport"
         >
+        <link
+            href="/favicon.ico"
+            rel="icon"
+        >
         <title>Core Styleguide</title>
     </head>
     <body>
+        <!-- eslint-disable-next-line @html-eslint/require-attrs -->
         <div id="styleguide"></div>
         <script type="module" src="/src/main.ts"></script>
     </body>
